syntax = "proto3";

option go_package = "github.com/YukiOnishi1129/techpicks/feed";

package checkpicks.content.v1;

import "google/protobuf/wrappers.proto";
import "content/platform.proto";
import "content/category.proto";

message Feed {
    string id = 1;
    Platform platform = 2;
    Category category = 3;
    string name = 4;
    string description = 5;
    string rssUrl = 6;
    string siteUrl = 7;
    string thumbnailUrl = 8;
    int64 trendPlatformType = 9;
    google.protobuf.StringValue apiQueryParam = 10;
    string createdAt = 11;
    string updatedAt = 12;
    google.protobuf.StringValue deletedAt = 13;
}